fixed z-index modal/backdrop/dropdown bug + fixed follow/unfollow bug

--- a/src/containers/home/section/section.css
+++ b/src/containers/home/section/section.css
@@ -41,7 +41,7 @@
   /* padding: 8px; */
   bottom: 10px;
   left: 10%;
-  z-index: 15;
+  z-index: 19;
   border-radius: 4px;
 }
 .section-items:hover > .add-to-library {
